# ellphi-demo

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  marimo.toml  pyproject.toml
.serena/: project.yml
docs/: additional_experiments.md  experiment_intent_synthesis.md  experiments.txt  future_integration_plan.md  index.md  task_1_validation.html
experiments/apct_2025/validation/data/: gradient_verification.csv  scaling_benchmark.csv
notebooks/: task_1_validation.ipynb  task_1_validation.py  template.py
notebooks/anisotropic_coverage/: anisotropic_coverage.py
notebooks/brain_dti/: brain_dti.py
notebooks/gradient_field/: gradient_field.py
notebooks/inverse_problem/: inverse_problem.py
notebooks/jax_integration/: jax_integration.py
notebooks/robustness/: robustness.py
notebooks/task_1_validation/: task_1_validation.py
notebooks/task_1_validation/data/: scaling_benchmark.csv
notebooks/torch_integration/: torch_integration.py
specs/: experiment_app_dti.md  experiment_app_earthquake.md  experiment_intent_synthesis.md  experiment_task_1_validation.md  experiment_task_2_optimization.md  experiment_task_3_robustness.md  future_integration_plan.md
