[tool.poetry]
name = "ellphi-demo"
version = "0.1.0"
description = "Demonstration notebooks for EllPHi"
authors = ["Tomoki Uda <tomoki.uda@gmail.com>"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
ellphi = "==0.1.1"
marimo = ">=0.10.0"
jupyterlab = ">=4.1"
ipykernel = ">=6.28"
nbformat = ">=5.10"
plotly = ">=5.22"
pandas = "^2.2.0"
homcloud = "^4.8.0"
tqdm = "^4.67.1"
seaborn = "^0.13"
matplotlib = ">=3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
