[project]
name = "ellphi-demo"
version = "0.1.0"
description = "Demonstration notebooks for EllPHi"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ellphi==0.1.1",
    "marimo>=0.10.0",
    "jupyterlab>=4.1",
    "ipykernel>=6.28",
    "nbformat>=5.10",
    "plotly>=5.22",
    "pandas>=2.2.0",
    "homcloud>=4.8.0,<5.0.0",
    "tqdm>=4.67.1",
    "seaborn>=0.13",
    "matplotlib>=3.9",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"